cabal-version:      2.2
name:               amazonka-apigateway
version:            1.6.1
synopsis:           Amazon API Gateway SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2015-07-09@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.APIGateway.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.APIGateway" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-apigateway

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.APIGateway
    Network.AWS.APIGateway.CreateApiKey
    Network.AWS.APIGateway.CreateAuthorizer
    Network.AWS.APIGateway.CreateBasePathMapping
    Network.AWS.APIGateway.CreateDeployment
    Network.AWS.APIGateway.CreateDocumentationPart
    Network.AWS.APIGateway.CreateDocumentationVersion
    Network.AWS.APIGateway.CreateDomainName
    Network.AWS.APIGateway.CreateModel
    Network.AWS.APIGateway.CreateRequestValidator
    Network.AWS.APIGateway.CreateResource
    Network.AWS.APIGateway.CreateRestApi
    Network.AWS.APIGateway.CreateStage
    Network.AWS.APIGateway.CreateUsagePlan
    Network.AWS.APIGateway.CreateUsagePlanKey
    Network.AWS.APIGateway.CreateVpcLink
    Network.AWS.APIGateway.DeleteApiKey
    Network.AWS.APIGateway.DeleteAuthorizer
    Network.AWS.APIGateway.DeleteBasePathMapping
    Network.AWS.APIGateway.DeleteClientCertificate
    Network.AWS.APIGateway.DeleteDeployment
    Network.AWS.APIGateway.DeleteDocumentationPart
    Network.AWS.APIGateway.DeleteDocumentationVersion
    Network.AWS.APIGateway.DeleteDomainName
    Network.AWS.APIGateway.DeleteGatewayResponse
    Network.AWS.APIGateway.DeleteIntegration
    Network.AWS.APIGateway.DeleteIntegrationResponse
    Network.AWS.APIGateway.DeleteMethod
    Network.AWS.APIGateway.DeleteMethodResponse
    Network.AWS.APIGateway.DeleteModel
    Network.AWS.APIGateway.DeleteRequestValidator
    Network.AWS.APIGateway.DeleteResource
    Network.AWS.APIGateway.DeleteRestApi
    Network.AWS.APIGateway.DeleteStage
    Network.AWS.APIGateway.DeleteUsagePlan
    Network.AWS.APIGateway.DeleteUsagePlanKey
    Network.AWS.APIGateway.DeleteVpcLink
    Network.AWS.APIGateway.FlushStageAuthorizersCache
    Network.AWS.APIGateway.FlushStageCache
    Network.AWS.APIGateway.GenerateClientCertificate
    Network.AWS.APIGateway.GetAccount
    Network.AWS.APIGateway.GetApiKey
    Network.AWS.APIGateway.GetApiKeys
    Network.AWS.APIGateway.GetAuthorizer
    Network.AWS.APIGateway.GetAuthorizers
    Network.AWS.APIGateway.GetBasePathMapping
    Network.AWS.APIGateway.GetBasePathMappings
    Network.AWS.APIGateway.GetClientCertificate
    Network.AWS.APIGateway.GetClientCertificates
    Network.AWS.APIGateway.GetDeployment
    Network.AWS.APIGateway.GetDeployments
    Network.AWS.APIGateway.GetDocumentationPart
    Network.AWS.APIGateway.GetDocumentationParts
    Network.AWS.APIGateway.GetDocumentationVersion
    Network.AWS.APIGateway.GetDocumentationVersions
    Network.AWS.APIGateway.GetDomainName
    Network.AWS.APIGateway.GetDomainNames
    Network.AWS.APIGateway.GetExport
    Network.AWS.APIGateway.GetGatewayResponse
    Network.AWS.APIGateway.GetGatewayResponses
    Network.AWS.APIGateway.GetIntegration
    Network.AWS.APIGateway.GetIntegrationResponse
    Network.AWS.APIGateway.GetMethod
    Network.AWS.APIGateway.GetMethodResponse
    Network.AWS.APIGateway.GetModel
    Network.AWS.APIGateway.GetModels
    Network.AWS.APIGateway.GetModelTemplate
    Network.AWS.APIGateway.GetRequestValidator
    Network.AWS.APIGateway.GetRequestValidators
    Network.AWS.APIGateway.GetResource
    Network.AWS.APIGateway.GetResources
    Network.AWS.APIGateway.GetRestApi
    Network.AWS.APIGateway.GetRestApis
    Network.AWS.APIGateway.GetSdk
    Network.AWS.APIGateway.GetSdkType
    Network.AWS.APIGateway.GetSdkTypes
    Network.AWS.APIGateway.GetStage
    Network.AWS.APIGateway.GetStages
    Network.AWS.APIGateway.GetTags
    Network.AWS.APIGateway.GetUsage
    Network.AWS.APIGateway.GetUsagePlan
    Network.AWS.APIGateway.GetUsagePlanKey
    Network.AWS.APIGateway.GetUsagePlanKeys
    Network.AWS.APIGateway.GetUsagePlans
    Network.AWS.APIGateway.GetVpcLink
    Network.AWS.APIGateway.GetVpcLinks
    Network.AWS.APIGateway.ImportApiKeys
    Network.AWS.APIGateway.ImportDocumentationParts
    Network.AWS.APIGateway.ImportRestApi
    Network.AWS.APIGateway.Lens
    Network.AWS.APIGateway.PutGatewayResponse
    Network.AWS.APIGateway.PutIntegration
    Network.AWS.APIGateway.PutIntegrationResponse
    Network.AWS.APIGateway.PutMethod
    Network.AWS.APIGateway.PutMethodResponse
    Network.AWS.APIGateway.PutRestApi
    Network.AWS.APIGateway.TagResource
    Network.AWS.APIGateway.TestInvokeAuthorizer
    Network.AWS.APIGateway.TestInvokeMethod
    Network.AWS.APIGateway.Types
    Network.AWS.APIGateway.Types.AccessLogSettings
    Network.AWS.APIGateway.Types.Account
    Network.AWS.APIGateway.Types.ApiKey
    Network.AWS.APIGateway.Types.ApiKeysFormat
    Network.AWS.APIGateway.Types.ApiKeySourceType
    Network.AWS.APIGateway.Types.ApiStage
    Network.AWS.APIGateway.Types.Authorizer
    Network.AWS.APIGateway.Types.AuthorizerType
    Network.AWS.APIGateway.Types.BasePathMapping
    Network.AWS.APIGateway.Types.CacheClusterSize
    Network.AWS.APIGateway.Types.CacheClusterStatus
    Network.AWS.APIGateway.Types.CanarySettings
    Network.AWS.APIGateway.Types.ClientCertificate
    Network.AWS.APIGateway.Types.ConnectionType
    Network.AWS.APIGateway.Types.ContentHandlingStrategy
    Network.AWS.APIGateway.Types.Deployment
    Network.AWS.APIGateway.Types.DeploymentCanarySettings
    Network.AWS.APIGateway.Types.DocumentationPart
    Network.AWS.APIGateway.Types.DocumentationPartLocation
    Network.AWS.APIGateway.Types.DocumentationPartType
    Network.AWS.APIGateway.Types.DocumentationVersion
    Network.AWS.APIGateway.Types.DomainName
    Network.AWS.APIGateway.Types.DomainNameStatus
    Network.AWS.APIGateway.Types.EndpointConfiguration
    Network.AWS.APIGateway.Types.EndpointType
    Network.AWS.APIGateway.Types.GatewayResponse
    Network.AWS.APIGateway.Types.GatewayResponseType
    Network.AWS.APIGateway.Types.Integration
    Network.AWS.APIGateway.Types.IntegrationResponse
    Network.AWS.APIGateway.Types.IntegrationType
    Network.AWS.APIGateway.Types.LocationStatusType
    Network.AWS.APIGateway.Types.Method
    Network.AWS.APIGateway.Types.MethodResponse
    Network.AWS.APIGateway.Types.MethodSetting
    Network.AWS.APIGateway.Types.MethodSnapshot
    Network.AWS.APIGateway.Types.Model
    Network.AWS.APIGateway.Types.MutualTlsAuthentication
    Network.AWS.APIGateway.Types.MutualTlsAuthenticationInput
    Network.AWS.APIGateway.Types.Op
    Network.AWS.APIGateway.Types.PatchOperation
    Network.AWS.APIGateway.Types.PutMode
    Network.AWS.APIGateway.Types.QuotaPeriodType
    Network.AWS.APIGateway.Types.QuotaSettings
    Network.AWS.APIGateway.Types.RequestValidator
    Network.AWS.APIGateway.Types.Resource
    Network.AWS.APIGateway.Types.RestApi
    Network.AWS.APIGateway.Types.SdkConfigurationProperty
    Network.AWS.APIGateway.Types.SdkType
    Network.AWS.APIGateway.Types.SecurityPolicy
    Network.AWS.APIGateway.Types.Stage
    Network.AWS.APIGateway.Types.StageKey
    Network.AWS.APIGateway.Types.ThrottleSettings
    Network.AWS.APIGateway.Types.TlsConfig
    Network.AWS.APIGateway.Types.UnauthorizedCacheControlHeaderStrategy
    Network.AWS.APIGateway.Types.Usage
    Network.AWS.APIGateway.Types.UsagePlan
    Network.AWS.APIGateway.Types.UsagePlanKey
    Network.AWS.APIGateway.Types.VpcLink
    Network.AWS.APIGateway.Types.VpcLinkStatus
    Network.AWS.APIGateway.UntagResource
    Network.AWS.APIGateway.UpdateAccount
    Network.AWS.APIGateway.UpdateApiKey
    Network.AWS.APIGateway.UpdateAuthorizer
    Network.AWS.APIGateway.UpdateBasePathMapping
    Network.AWS.APIGateway.UpdateClientCertificate
    Network.AWS.APIGateway.UpdateDeployment
    Network.AWS.APIGateway.UpdateDocumentationPart
    Network.AWS.APIGateway.UpdateDocumentationVersion
    Network.AWS.APIGateway.UpdateDomainName
    Network.AWS.APIGateway.UpdateGatewayResponse
    Network.AWS.APIGateway.UpdateIntegration
    Network.AWS.APIGateway.UpdateIntegrationResponse
    Network.AWS.APIGateway.UpdateMethod
    Network.AWS.APIGateway.UpdateMethodResponse
    Network.AWS.APIGateway.UpdateModel
    Network.AWS.APIGateway.UpdateRequestValidator
    Network.AWS.APIGateway.UpdateResource
    Network.AWS.APIGateway.UpdateRestApi
    Network.AWS.APIGateway.UpdateStage
    Network.AWS.APIGateway.UpdateUsage
    Network.AWS.APIGateway.UpdateUsagePlan
    Network.AWS.APIGateway.UpdateVpcLink
    Network.AWS.APIGateway.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.13  && <5

test-suite amazonka-apigateway-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.APIGateway
    Test.AWS.APIGateway.Internal
    Test.AWS.Gen.APIGateway

  build-depends:
    , amazonka              >=1.6.1 && <1.6.2
    , amazonka-apigateway
    , amazonka-test         >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
