name:                  amazonka-appstream
version:               1.5.0
synopsis:              Amazon AppStream SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2017 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.AppStream" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-appstream

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.AppStream
        , Network.AWS.AppStream.AssociateFleet
        , Network.AWS.AppStream.CreateDirectoryConfig
        , Network.AWS.AppStream.CreateFleet
        , Network.AWS.AppStream.CreateImageBuilder
        , Network.AWS.AppStream.CreateImageBuilderStreamingURL
        , Network.AWS.AppStream.CreateStack
        , Network.AWS.AppStream.CreateStreamingURL
        , Network.AWS.AppStream.DeleteDirectoryConfig
        , Network.AWS.AppStream.DeleteFleet
        , Network.AWS.AppStream.DeleteImage
        , Network.AWS.AppStream.DeleteImageBuilder
        , Network.AWS.AppStream.DeleteStack
        , Network.AWS.AppStream.DescribeDirectoryConfigs
        , Network.AWS.AppStream.DescribeFleets
        , Network.AWS.AppStream.DescribeImageBuilders
        , Network.AWS.AppStream.DescribeImages
        , Network.AWS.AppStream.DescribeSessions
        , Network.AWS.AppStream.DescribeStacks
        , Network.AWS.AppStream.DisassociateFleet
        , Network.AWS.AppStream.ExpireSession
        , Network.AWS.AppStream.ListAssociatedFleets
        , Network.AWS.AppStream.ListAssociatedStacks
        , Network.AWS.AppStream.StartFleet
        , Network.AWS.AppStream.StartImageBuilder
        , Network.AWS.AppStream.StopFleet
        , Network.AWS.AppStream.StopImageBuilder
        , Network.AWS.AppStream.Types
        , Network.AWS.AppStream.UpdateDirectoryConfig
        , Network.AWS.AppStream.UpdateFleet
        , Network.AWS.AppStream.UpdateStack
        , Network.AWS.AppStream.Waiters

    other-modules:
          Network.AWS.AppStream.Types.Product
        , Network.AWS.AppStream.Types.Sum

    build-depends:
          amazonka-core == 1.5.0.*
        , base          >= 4.7     && < 5

test-suite amazonka-appstream-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.AppStream
        , Test.AWS.Gen.AppStream
        , Test.AWS.AppStream.Internal

    build-depends:
          amazonka-core == 1.5.0.*
        , amazonka-test == 1.5.0.*
        , amazonka-appstream
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
